# demoscene

./: CMakeLists.txt  ImageEffect.cpp  Timeline.cpp  TransitionManager.h  demo.cpp  readme.md
res/: text1.jpg~  text2.jpg~
src/: MusicManager.cpp  MusicManager.h  PaletteBuilder.cpp  PaletteBuilder.h  Timeline.h  TransitionManager.cpp  TransitionManager.h  defines.h  demo.cpp  demo.h  effect.cpp  effect.h  main.cpp
src/effects/: ImageEffect.cpp  ImageEffect.h  LetteringEffect.cpp  LetteringEffect.h  PlasmaEffect.cpp  PlasmaEffect.h  PlasmaImageEffect.cpp  PlasmaImageEffect.h  RotateImage.cpp  RotateImage.h
